# axum-architecture

./: Cargo.toml  Makefile  application.yaml  env.yaml
src/: main.rs
src/configs/: environment.rs
src/delivery/controllers/: hello_controller.rs  mod.rs
src/delivery/routes/: hello.rs  mod.rs  user.rs
src/domain/: mod.rs
src/domain/dto/: user_dto.rs
src/domain/models/: user.rs
src/helpers/: available_port.rs  mod.rs
src/interface/controllers/: user_controller.rs
tests/: db.rs  env.rs
