[package]
name = "axum_architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
config = "0.15.8"
once_cell = "1.20.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
tower = "0.5.2"
tracing-subscriber = "0.3.19"
